Upload Box overlapping bug fix
Fixed upload box overlapping for big screens

--- a/front-end/src/css/UploadAcceptanceLetter.css
+++ b/front-end/src/css/UploadAcceptanceLetter.css
@@ -72,6 +72,7 @@ p {
 .input-field {
   width: 20vw;
   height: 40px;
+  max-width: 200px;
   margin-top: 5px;
   padding: 0 10px;
   font-size: 16px;
